# chessbuddy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_import_jobs.py  0003_external_accounts_provider_telegram.py  0004_players_link_user_id.py  0005_user_settings.py
cbuddy/: api.py  bot.py  chess_images.py  cli.py  config.py  db.py  engine_worker.py  importer.py
docker/initdb/: 01_app_user.sql
tests/: test_api.py  test_e2e.py
