[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chessbuddy"
version = "0.1.0"
description = "Chess buddy analysis tools"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["cbuddy"]

[project.scripts]
cbuddy = "cbuddy.cli:main"
